syntax = "proto3";


package proto;

message LogInRequest {
    string Login =1 ;
    string Password = 2;
}

message AuthResponse {
    string Token = 1;
}

message SignUpRequest {
    string Username = 1;
    string Email = 2;
    string Password = 3;
}
message SignUpResponse {
    string msg = 1;
}
service AuthService {
    rpc Login (LogInRequest) returns (AuthResponse);
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
}
